<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qooway Merchant App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_more">Menu More</string>
    <string name="search_title">search</string>
    <string name="query_hint">Start searching now&#8230;</string>

    <string-array name="menu_item">
        <item>RECORD TRANSACTIONS</item>
        <item>VOID TRANSACTIONS</item>
        <item>MISSING TRANSACTIONS</item>
        <item>SALES TRANSACTIONS</item>
    </string-array>
    <string-array name="menu_item_image_name">
        <item>record_icon</item>
        <item>missing_icon</item>
        <item>void_icon</item>
        <item>sales_history_icon</item>
    </string-array>

    
    <string-array name="transaction_xml">
        <item>CustomerID</item>
        <item>MerchantID</item>
        <item>OrderID</item>
        <item>OrderTime</item>
        <item>Points</item>
        <item>SoldAmount</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="record_agree_greetings">We agree to the following discounts and offers:
				\nQooway members can collect points at our location.</string>
    <string name="card_number">Card Number</string>
    <string name="please_enter_card">Please enter the 16-digit Qooway Card number.</string>
    <string name="sales_amount">Sales Amount:</string>
    <string name="reference">Reference #:</string>
    <string name="qoopoints">QooPoints Earned:</string>
    <string name="vouchers">Vouchers:</string>
    <string name="submit">Submit</string>
    <string name="record_transactions">Record Transactions</string>
    <string name="void_transactions">Void Transactions</string>
    <string name="missing_transactions">Missing Transactions</string>
    <string name="sales_history">Sales History</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="reason">Reason:</string>
    <string name="search_by_card">Search by Card Number:</string>
    <string name="search">Search</string>
    <string name="_void">Void</string>
    <string name="points_earned">Points Earned</string>

</resources>