<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/Red"
        android:gravity="center"
        android:text="@string/missing_transactions"
        android:textColor="@color/White"
         android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
       
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_alignParentRight="true" >

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/DarkGray2" 
                     android:textSize="20dp"
                    />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_bar"
                    android:ems="10"
                    android:textColor="@color/DarkGray2" 
                    android:inputType="time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/DarkGray2"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_bar"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/DarkGray2" />
            </LinearLayout>

        </RelativeLayout>


        
        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textColor="@color/DarkGray2" 
               android:textSize="20dp" />
               <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >
            
        <EditText
            android:id="@+id/editTextReason"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/big_bar"
            android:ems="10"
            android:textColor="@color/DarkGray2">

            <requestFocus />
        </EditText>
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@color/DarkGray2" 
             android:textSize="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_card"
            android:textColor="@color/DarkGray2" 
             android:textSize="13dp" />

                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >
        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/big_bar"
            android:ems="10"
            android:textColor="@color/DarkGray2" >

            <requestFocus />
        </EditText>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_alignParentLeft="true">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_amount"
                    android:textColor="@color/DarkGray2"
                      android:textSize="20dp"  />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_bar"
                    android:ems="10"
                    android:textColor="@color/DarkGray2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reference"
                    android:textColor="@color/DarkGray2"
                        android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                  android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_bar"
                    android:ems="10"
                    android:textColor="@color/DarkGray2" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
                    android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qoopoints"
                android:textColor="@color/DarkGray2" 
                  android:textSize="20dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/Red" 
                 android:textSize="20dp"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/submit_icon"
        android:text="@string/submit"
       android:textSize="30dp"
        android:textColor="@android:color/white" />

</LinearLayout>